--- a/index.html
+++ b/index.html
@@ -127,14 +127,14 @@
                     <div class="text-container-2">
                         <h1>2035 Group Vision</h1>
                         <h2>年商100億円カンパニーへ 躍進します</h2>
-                        <p>一人では難しい挑戦も、仲間たちとの協力によって乗り越え<br>
+                        <p>一人では難しい挑戦も、仲間たちとの協力によって乗り越え
                         多くの企業や事業を世に創出し続けます。</p>
             
                         <p>ベンチャー企業は、しばしば嵐や波にさらされる小さなイカダのようなものです。<br>
-                        変動する市場の波を乗り越え、持続可能な成果を生み出す強さと堅牢さを兼ね備えた<br>
+                        変動する市場の波を乗り越え、持続可能な成果を生み出す強さと堅牢さを兼ね備えた
                         安定した大船を築くことを目指します。</p>
             
-                        <p>夢を現実に変える力を持つこの船で私たちは共に乗り込む仲間たちと力を合わせて航海を続け<br>
+                        <p>夢を現実に変える力を持つこの船で私たちは共に乗り込む仲間たちと力を合わせて航海を続け
                         世界中の人々に夢と希望の灯をともします。</p>
                     </div>
                 </section>
