--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="header-all">
                 <div class="header-upper">
                     <div class="header-logo">
-                        <a class=header-logo href="#"><img src="img/logo.jpg" alt="" height="50px"></a>
+                        <a class=header-logo href="index.html"><img src="img/logo.jpg" alt="" height="50px"></a>
                         <p class="logo-text">株式会社リライトホールディングス</p> 
                     </div>
                 </div>
@@ -31,22 +31,22 @@
                         <span class="close-btn">&times;</span>
                         <ul>
                             <li>
-                                <a class="index-text" href="#">企業情報</a>
+                                <a class="index-text" href="company.html">企業情報</a>
                             </li>
                         </ul>
                         <ul>
                             <li>
-                                <a class="index-text"  href="#">事業内容</a>
+                                <a class="index-text"  href="business.html">事業内容</a>
                             </li>
                         </ul>
                         <ul>
                             <li>
-                                <a class="index-text"  href="#">採用情報</a>
+                                <a class="index-text"  href="adption.html">採用情報</a>
                             </li>
                         </ul>
                         <ul>
                             <li>
-                                <a class="index-text"  href="#">お問い合わせ</a>
+                                <a class="index-text"  href="inquiry.html">お問い合わせ</a>
                             </li>
                         </ul>
                     </div>
@@ -77,7 +77,7 @@
                         <div class="swiper-slide"><img src="img/company/matsuda.png" alt="画像2"></div>
                         <div class="swiper-slide"><img src="img/company/seiwa.png" alt="画像3"></div>
                         <div class="swiper-slide"><img src="img/company/walk.png" alt="画像4"></div>
-                        <!-- <div class="swiper-slide"><img src="img/company/active.jpg" alt="画像5"></div> -->
+                        <div class="swiper-slide"><img src="img/company/active.png" width="370px" alt="画像5"></div>
                     </div>
                     <!-- 前後のボタン
                     <div class="swiper-button-next"></div>
@@ -167,11 +167,11 @@
                     </div>
                 </section>
                     <!-- 社長メッセージ -->
-    <section class="section">
+    <section class="section-ceo">
         <div class="card-container fade-in">
             <a href="#" class="card">
                 <div class="card-image">
-                    <img src="img/ceo.jpg" alt="社長">
+                    <!-- <img src="https://placehold.jp/500x500.png" alt="社長"> -->
                 </div>
                 <div class="card-text">
                     <h3>社長メッセージ <span class="arrow">▶</span></h3>
@@ -181,11 +181,11 @@
     </section>
 
     <!-- 採用情報 -->
-    <section class="section">
+    <section class="section-saiyou">
         <div class="card-container fade-in">
             <a href="#" class="card">
                 <div class="card-image">
-                    <img src="img/recruit.jpg" alt="採用情報">
+                    <!-- <img src="https://placehold.jp/500x500.png" alt="採用情報"> -->
                 </div>
                 <div class="card-text">
                     <h3>採用情報 <span class="arrow">▶</span></h3>
@@ -197,8 +197,38 @@
                 
         </main>
         <footer>
-
-
+            <div class="footer">
+                <div class="footer-text">
+                    <h2>企業情報</h2>
+                    <div class="detailes">
+                        <a href="#">-グループCEOメッセージ</a>
+                        <a href="#">-グループミッション・経営理念</a>
+                        <a href="#">-会社概要</a>
+                        <a href="#">-提携先企業一覧</a>
+                    </div>
+                </div>
+                <div class="footer-text">
+                    <h2>事業紹介</h2>
+                    <div class="detailes">
+                        <a href="#">-ホールディングス事業</a>
+                        <a href="#">-子会社の経営管理等</a>
+                        <a href="#">-グループ会社紹介</a>
+                    </div>
+                </div>
+                <div class="footer-text">
+                    <h2>採用情報</h2>
+                    <div class="detailes">
+                        <a href="#">準備中</a>
+                    </div>
+                </div>
+                <div class="footer-text">
+                    <h2>お問い合わせ</h2>
+                </div>
+            </div>
+            <div class="copyright-tab">
+                <a href="#"><img src="img/logo.jpg" alt=""></a><br>
+                <small class="copyright">&copy; REWRITE HOLDINGS all rights reserved.</small>
+            </div>
         </footer>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
