--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <div class="swiper-slide"><img src="img/company/matsuda.png" alt="画像2"></div>
                         <div class="swiper-slide"><img src="img/company/seiwa.png" alt="画像3"></div>
                         <div class="swiper-slide"><img src="img/company/walk.png" alt="画像4"></div>
-                        <div class="swiper-slide"><img src="img/company/active.png" width="370px" alt="画像5"></div>
+                        <div class="swiper-slide"><img src="img/company/active.png" alt="画像5"></div>
                     </div>
                     <!-- 前後のボタン
                     <div class="swiper-button-next"></div>
