--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
 
             
-                <div class="swiper mySwiper">
+                <!-- <div class="swiper mySwiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide"><img src="img/company/financial.webp" alt="画像1"></div>
                         <div class="swiper-slide"><img src="img/company/matsuda.png" alt="画像2"></div>
@@ -79,12 +79,61 @@
                         <div class="swiper-slide"><img src="img/company/walk.png" alt="画像4"></div>
                         <div class="swiper-slide"><img src="img/company/active.png" alt="画像5"></div>
                     </div>
-                    <!-- 前後のボタン
-                    <div class="swiper-button-next"></div>
-                    <div class="swiper-button-prev"></div>
+                    <!-
                      ページネーション（下の丸いボタン）
                     <div class="swiper-pagination"></div> --> 
+                <!-- </div> --> 
+
+
+                    <!-- Swiper スライドショー -->
+    <div class="swiper-container">
+        <div class="swiper mySwiper">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <div class="slide-content">
+                        <img src="https://placehold.jp/150x150.png" alt="画像1">
+                        <img src="https://placehold.jp/150x150.png" alt="画像2">
+                    </div>
                 </div>
+                <div class="swiper-slide">
+                    <div class="slide-content">
+                        <img src="https://placehold.jp/150x150.png" alt="画像3">
+                        <img src="https://placehold.jp/150x150.png" alt="画像4">
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slide-content">
+                        <img src="https://placehold.jp/150x150.png" alt="画像5">
+                        <img src="https://placehold.jp/150x150.png" alt="画像6">
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="slide-content">
+                        <img src="https://placehold.jp/150x150.png" alt="画像7">
+                        <img src="https://placehold.jp/150x150.png" alt="画像8">
+                    </div>
+                </div>
+
+            </div>
+             <!-- 矢印ボタン -->
+              <div class="swiper-button">
+
+                  <div class="swiper-button-prev"></div>
+                  <div class="swiper-button-next"></div>
+              </div>
+        </div>
+
+        <!-- 進行バーとボタン -->
+        <div class="progress-container">
+            <div class="progress-bar"></div>
+
+            <button class="group-list-btn">グループ一覧</button>
+        </div>
+    </div>
+
+
+
+
                 
                 <section class="topics">
                     <div class="topics-main">
@@ -218,7 +267,9 @@
                 <div class="footer-text">
                     <h2>採用情報</h2>
                     <div class="detailes">
-                        <a href="#">準備中</a>
+                        <a href="#">-経営幹部採用</a>
+                        <a href="#">-社員採用社員採用</a>
+                        <a href="#">-アルバイト採用</a>
                     </div>
                 </div>
                 <div class="footer-text">
