--- a/adption.html
+++ b/adption.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css">
-    <link rel="stylesheet" href="css/adption.css">
+    <link rel="stylesheet" href="css/specimen.css">
     <link rel="stylesheet" href="css/style.css">
     <title>REWRITE HOLDINGS</title>
 </head>
@@ -86,19 +86,19 @@
     <div class="l-block">
       <div class="l-contents">
         <div class="l-section pb0">
-          <h2 class="p-recruit__leadTtl">あなたにとっての<br class="u-sp"><span>”わくわく”</span>がここにあるはず！</h2>
+          <h2 class="p-recruit__leadTtl">テキストテキスト<br class="u-sp"><!-- <span>””</span> -->テキストテキストテキスト</h2>
           <ul class="m-bnrList m-bnrList--flex m-bnrList--mt">
             <li class="m-bnrList__item m-bnrList__item--sizeL">
               <a class="m-circleBtn-element" href="/recruit/career/">
                 <div class="m-bnrList__img">
                   <picture>
-                    <source media="(max-width:750px)" srcset="https://placehold.jp/300x200.pngrecruit_bnr02--sp.webp">
-                    <img loading="lazy" decoding="async" src="https://placehold.jp/300x200.pngrecruit_bnr02.webp" alt="経営幹部採用">
+                    <source media="(max-width:750px)" srcset="https://placehold.jp/345x125.png">
+                    <img loading="lazy" decoding="async" src="https://placehold.jp/560x200.png" alt="経営幹部採用">
                   </picture>
                 </div>
                 <h2 class="m-bnrList__ttl m-bnrList__ttl--sizeL">
                   <span class="ja">経営幹部採用</span>
-                  <span class="en">Mid-career</span>
+                  <span class="en">Executive</span>
                 </h2>
                 <div class="m-circleBtn large arrow-white"><span></span></div>
               </a>
@@ -107,8 +107,8 @@
               <a class="m-circleBtn-element" href="/recruit/graduates/">
                 <div class="m-bnrList__img">
                   <picture>
-                    <source media="(max-width:750px)" srcset="https://placehold.jp/300x200.png">
-                    <img loading="lazy" decoding="async" src="https://placehold.jp/300x200.png" alt="社員採用">
+                    <source media="(max-width:750px)" srcset="https://placehold.jp/345x125.png">
+                    <img loading="lazy" decoding="async" src="https://placehold.jp/560x200.png" alt="社員採用">
                   </picture>
                 </div>
                 <h2 class="m-bnrList__ttl m-bnrList__ttl--sizeL">
@@ -122,8 +122,8 @@
               <a class="m-circleBtn-element" href="/recruit/arbeit/">
                 <div class="m-bnrList__img">
                   <picture>
-                    <source media="(max-width:750px)" srcset="https://placehold.jp/300x200.png">
-                    <img loading="lazy" decoding="async" src="https://placehold.jp/300x200.png" alt="アルバイト採用">
+                    <source media="(max-width:750px)" srcset="https://placehold.jp/345x125.png">
+                    <img loading="lazy" decoding="async" src="https://placehold.jp/560x200.png" alt="アルバイト採用">
                   </picture>
                 </div>
                 <h2 class="m-bnrList__ttl m-bnrList__ttl--sizeL">
@@ -160,7 +160,7 @@
     </div>
   
     <!-- check -->
-    <div class="p-recruit__check">
+    <!-- <div class="p-recruit__check">
       <div class="p-recruit__checkInner">
         <p class="p-recruit__checkTtl">こちらもチェック！</p>
         <ul class="p-recruit__checkList">
@@ -181,7 +181,7 @@
           </li>
         </ul>
       </div>
-    </div>
+    </div> -->
     <!-- /check -->
   
     <div class="l-block">
@@ -204,7 +204,7 @@
       </div>
     </div>
   
-    <div class="l-block l-block--bg">
+    <!-- <div class="l-block l-block--bg">
       <div class="l-contents">
         <div class="l-section">
   
@@ -254,7 +254,7 @@
         <div class="m-circleBtn m-circleBtn--sizeS arrow-white"><span></span></div>
       </a>
     </li>
-  </ul>
+  </ul> -->
   
           <div id="faq" class="p-recruit__faq">
             <div class="p-recruit__faqInner">
@@ -456,74 +456,8 @@
                     </li>
                   </ul>
                 </li>
-                <li class="p-recruit__faqListItem">
-                  <a href="javascript:void(0);">
-                    障がい者採用について
-                    <span class="p-recruit__faqListItemBtn"></span>
-                  </a>
-                  <ul class="p-recruit__faqChild" style="display: none;">
-                    <li class="p-recruit__faqChildItem">
-                      <p class="p-recruit__faqChildQuestion">
-                        <span class="p-recruit__faqChildQuestionIcon">Q.1</span>
-                        <span class="p-recruit__faqChildQuestionTxt">どんな仕事がありますか？</span>
-                        <span class="p-recruit__faqChildQuestionBtn"></span>
-                      </p>
-                      <p class="p-recruit__faqChildAnswer" style="display: none;">
-                        <span class="p-recruit__faqChildAnswerIcon">A.1</span>
-                        <span class="p-recruit__faqChildAnswerTxt">当社グループは、飲食店経営がメイン事業となりますので、お店での接客、調理補助が職務内容となります。</span>
-                        <span class="p-recruit__faqChildAnswerBtn"></span>
-                      </p>
-                    </li>
-                    <li class="p-recruit__faqChildItem">
-                      <p class="p-recruit__faqChildQuestion">
-                        <span class="p-recruit__faqChildQuestionIcon">Q.2</span>
-                        <span class="p-recruit__faqChildQuestionTxt">雇用形態はどのような形ですか？</span>
-                        <span class="p-recruit__faqChildQuestionBtn"></span>
-                      </p>
-                      <p class="p-recruit__faqChildAnswer" style="display: none;">
-                        <span class="p-recruit__faqChildAnswerIcon">A.2</span>
-                        <span class="p-recruit__faqChildAnswerTxt">パート・アルバイトや社員など、応募者の方の障害特性に配慮した雇用形態をご提案しています。</span>
-                        <span class="p-recruit__faqChildAnswerBtn"></span>
-                      </p>
-                    </li>
-                    <li class="p-recruit__faqChildItem">
-                      <p class="p-recruit__faqChildQuestion">
-                        <span class="p-recruit__faqChildQuestionIcon">Q.3</span>
-                        <span class="p-recruit__faqChildQuestionTxt">どのような障がい者の方が働いていますか？</span>
-                        <span class="p-recruit__faqChildQuestionBtn"></span>
-                      </p>
-                      <p class="p-recruit__faqChildAnswer" style="display: none;">
-                        <span class="p-recruit__faqChildAnswerIcon">A.3</span>
-                        <span class="p-recruit__faqChildAnswerTxt">精神障害、身体障害の方もおりますが、知的障害の方が最も多く在籍しています。</span>
-                        <span class="p-recruit__faqChildAnswerBtn"></span>
-                      </p>
-                    </li>
-                    <li class="p-recruit__faqChildItem">
-                      <p class="p-recruit__faqChildQuestion">
-                        <span class="p-recruit__faqChildQuestionIcon">Q.4</span>
-                        <span class="p-recruit__faqChildQuestionTxt">応募したいときはどうすればいいですか？</span>
-                        <span class="p-recruit__faqChildQuestionBtn"></span>
-                      </p>
-                      <p class="p-recruit__faqChildAnswer" style="display: none;">
-                        <span class="p-recruit__faqChildAnswerIcon">A.4</span>
-                        <span class="p-recruit__faqChildAnswerTxt">株式会社クリエイト・レストランツ・ホールディングスまで応募書類をご送付ください。<br>※特定支援学校在籍の場合は学校を経由してご応募ください。</span>
-                        <span class="p-recruit__faqChildAnswerBtn"></span>
-                      </p>
-                    </li>
-                    <li class="p-recruit__faqChildItem">
-                      <p class="p-recruit__faqChildQuestion">
-                        <span class="p-recruit__faqChildQuestionIcon">Q.5</span>
-                        <span class="p-recruit__faqChildQuestionTxt">障がいに対する配慮を受けることはできますか？</span>
-                        <span class="p-recruit__faqChildQuestionBtn"></span>
-                      </p>
-                      <p class="p-recruit__faqChildAnswer" style="display: none;">
-                        <span class="p-recruit__faqChildAnswerIcon">A.5</span>
-                        <span class="p-recruit__faqChildAnswerTxt">ご応募の際に、配慮事項を申し出ていただき、対応可能な場合は可能です。また、障害者職業生活相談員のフォローも可能です。</span>
-                        <span class="p-recruit__faqChildAnswerBtn"></span>
-                      </p>
-                    </li>
-                  </ul>
-                </li>
+                
+                
               </ul>
             </div>
           </div>
@@ -540,6 +474,42 @@
     </div>
     <!-- /links -->
   </main>
+  <footer>
+    <div class="footer">
+        <div class="footer-text">
+            <h2>企業情報</h2>
+            <div class="detailes">
+                <a href="#">-グループCEOメッセージ</a>
+                <a href="#">-グループミッション・経営理念</a>
+                <a href="#">-会社概要</a>
+                <a href="#">-提携先企業一覧</a>
+            </div>
+        </div>
+        <div class="footer-text">
+            <h2>事業紹介</h2>
+            <div class="detailes">
+                <a href="#">-ホールディングス事業</a>
+                <a href="#">-子会社の経営管理等</a>
+                <a href="#">-グループ会社紹介</a>
+            </div>
+        </div>
+        <div class="footer-text">
+            <h2>採用情報</h2>
+            <div class="detailes">
+                <a href="#">-経営幹部採用</a>
+                <a href="#">-社員採用社員採用</a>
+                <a href="#">-アルバイト採用</a>
+            </div>
+        </div>
+        <div class="footer-text">
+            <h2>お問い合わせ</h2>
+        </div>
+    </div>
+    <div class="copyright-tab">
+        <a href="#"><img src="img/logo.jpg" alt=""></a><br>
+        <small class="copyright">&copy; REWRITE HOLDINGS all rights reserved.</small>
+    </div>
+  </footer>
 </section>
 <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 <script src="js/hamberger_btn.js"></script>
