--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                     <!-- 社長メッセージ -->
     <section class="section-ceo">
         <div class="card-container fade-in">
-            <a href="#" class="card">
+            <a href="" class="card">
                 <div class="card-image">
                     <!-- <img src="https://placehold.jp/500x500.png" alt="社長"> -->
                 </div>
@@ -232,7 +232,7 @@
     <!-- 採用情報 -->
     <section class="section-saiyou">
         <div class="card-container fade-in">
-            <a href="#" class="card">
+            <a href="adption.html" class="card">
                 <div class="card-image">
                     <!-- <img src="https://placehold.jp/500x500.png" alt="採用情報"> -->
                 </div>
