--- a/company.html
+++ b/company.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/specimen.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>企業情報</title>
 </head>
 <body>
     <header>
@@ -40,7 +40,7 @@
                     </ul>
                     <ul>
                         <li>
-                            <a class="index-text"  href="adption.html">採用情報</a>
+                            <a class="index-text"  href="adoption.html">採用情報</a>
                         </li>
                     </ul>
                     <ul>
@@ -97,7 +97,7 @@
                 <p class="p-company__messageName">代表取締役社長　<img loading="lazy" decoding="async" class="u-width--auto u-vaSub" src="/assets/img/company/message/message_name.svg" alt="広永勝太"></p>
                 <div class="p-company__messageBtn">
                   <div class="m-arrowBtn">
-                    <a class="m-arrowBtn-hover" href="/company/message/">
+                    <a class="m-arrowBtn-hover" href="company/message.html">
                       <span class="m-arrowBtn-inline">詳細はこちら</span>
                     </a>
                   </div>
@@ -110,7 +110,7 @@
                 <div class="l-section">
                   <ul class="m-bnrList m-bnrList--flex">
                     <li class="m-bnrList__item m-bnrList__item--sizeL">
-                      <a class="m-circleBtn-element" href="/company/mission/">
+                      <a class="m-circleBtn-element" href="company/mission.html">
                         <div class="m-bnrList__img">
                           <picture>
                             <source media="(max-width:750px)" srcset="https://placehold.jp/345x125.png">
@@ -124,7 +124,7 @@
                         <div class="m-circleBtn large arrow-white"><span></span></div>
                       </a>
                     </li>
-                    <li class="m-bnrList__item m-bnrList__item--sizeL">
+                    <!-- <li class="m-bnrList__item m-bnrList__item--sizeL">
                       <a class="m-circleBtn-element" href="/company/office/">
                         <div class="m-bnrList__img">
                           <picture>
@@ -138,9 +138,9 @@
                         </h2>
                         <div class="m-circleBtn large arrow-white"><span></span></div>
                       </a>
-                    </li>
+                    </li> -->
                     <li class="m-bnrList__item m-bnrList__item--sizeL">
-                      <a class="m-circleBtn-element" href="/company/profile/">
+                      <a class="m-circleBtn-element" href="company/summary.html">
                         <div class="m-bnrList__img">
                           <picture>
                             <source media="(max-width:750px)" srcset="https://placehold.jp/345x125.png">
@@ -155,7 +155,7 @@
                       </a>
                     </li>
                     <li class="m-bnrList__item m-bnrList__item--sizeL">
-                      <a class="m-circleBtn-element" href="/company/history/">
+                      <a class="m-circleBtn-element" href="company/partnar.html">
                         <div class="m-bnrList__img">
                           <picture>
                             <source media="(max-width:750px)" srcset="https://placehold.jp/345x125.png">
@@ -178,41 +178,41 @@
     </body>
 
     <footer>
-        <div class="footer">
-            <div class="footer-text">
-                <h2>企業情報</h2>
-                <div class="detailes">
-                    <a href="#">-グループCEOメッセージ</a>
-                    <a href="#">-グループミッション・経営理念</a>
-                    <a href="#">-会社概要</a>
-                    <a href="#">-提携先企業一覧</a>
-                </div>
-            </div>
-            <div class="footer-text">
-                <h2>事業紹介</h2>
-                <div class="detailes">
-                    <a href="#">-ホールディングス事業</a>
-                    <a href="#">-子会社の経営管理等</a>
-                    <a href="#">-グループ会社紹介</a>
-                </div>
-            </div>
-            <div class="footer-text">
-                <h2>採用情報</h2>
-                <div class="detailes">
-                    <a href="#">-経営幹部採用</a>
-                    <a href="#">-社員採用社員採用</a>
-                    <a href="#">-アルバイト採用</a>
-                </div>
-            </div>
-            <div class="footer-text">
-                <h2>お問い合わせ</h2>
-            </div>
-        </div>
-        <div class="copyright-tab">
-            <a href="#"><img src="img/logo.jpg" alt=""></a><br>
-            <small class="copyright">&copy; REWRITE HOLDINGS all rights reserved.</small>
-        </div>
-    </footer>
+      <div class="footer">
+          <div class="footer-text">
+              <h2>企業情報</h2>
+              <div class="detailes">
+                  <a href="company/message.html">-グループCEOメッセージ</a>
+                  <a href="company/mission.html">-グループミッション・経営理念</a>
+                  <a href="company/summary.html">-会社概要</a>
+                  <a href="company/partnar.html">-提携先企業一覧</a>
+              </div>
+          </div>
+          <div class="footer-text">
+              <h2>事業紹介</h2>
+              <div class="detailes">
+                  <a href="business/holdings.html">-ホールディングス事業</a>
+                  <!-- <a href="business/subsidiary.html">-子会社の経営管理等</a> -->
+                  <a href="business/group.html">-グループ会社紹介</a>
+              </div>
+          </div>
+          <div class="footer-text">
+              <h2>採用情報</h2>
+              <div class="detailes">
+                  <a href="adoption/executive.html">-経営幹部採用</a>
+                  <a href="adoption/employee.html">-社員採用社員採用</a>
+                  <a href="adoption/part.html">-アルバイト採用</a>
+              </div>
+          </div>
+          <div class="footer-text">
+              <h2>お問い合わせ</h2>
+          </div>
+      </div>
+      <div class="copyright-tab">
+          <a href="#"><img src="img/logo.jpg" alt=""></a><br>
+          <small class="copyright">&copy; REWRITE HOLDINGS all rights reserved.</small>
+      </div>
+  </footer>
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
     <script src="js/hamberger_btn.js"></script>
     <script src="js/script.js"></script>
