--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         </ul>
                         <ul>
                             <li>
-                                <a class="index-text"  href="adption.html">採用情報</a>
+                                <a class="index-text"  href="adoption.html">採用情報</a>
                             </li>
                         </ul>
                         <ul>
@@ -52,7 +52,6 @@
                     </div>
                 </nav>
             </div>
-    
         </header>
         <main>
             <div class="first-view">
@@ -126,8 +125,10 @@
         <!-- 進行バーとボタン -->
         <div class="progress-container">
             <div class="progress-bar"></div>
+            <a href="business/group.html">
+                <button class="group-list-btn">グループ一覧</button>
+            </a>
 
-            <button class="group-list-btn">グループ一覧</button>
         </div>
     </div>
 
@@ -218,7 +219,7 @@
                     <!-- 社長メッセージ -->
     <section class="section-ceo">
         <div class="card-container fade-in">
-            <a href="" class="card">
+            <a href="company/message.html" class="card">
                 <div class="card-image">
                     <!-- <img src="https://placehold.jp/500x500.png" alt="社長"> -->
                 </div>
@@ -232,7 +233,7 @@
     <!-- 採用情報 -->
     <section class="section-saiyou">
         <div class="card-container fade-in">
-            <a href="adption.html" class="card">
+            <a href="adoption.html" class="card">
                 <div class="card-image">
                     <!-- <img src="https://placehold.jp/500x500.png" alt="採用情報"> -->
                 </div>
@@ -250,26 +251,26 @@
                 <div class="footer-text">
                     <h2>企業情報</h2>
                     <div class="detailes">
-                        <a href="#">-グループCEOメッセージ</a>
-                        <a href="#">-グループミッション・経営理念</a>
-                        <a href="#">-会社概要</a>
-                        <a href="#">-提携先企業一覧</a>
+                        <a href="company/message.html">-グループCEOメッセージ</a>
+                        <a href="company/mission.html">-グループミッション・経営理念</a>
+                        <a href="company/summary.html">-会社概要</a>
+                        <a href="company/partnar.html">-提携先企業一覧</a>
                     </div>
                 </div>
                 <div class="footer-text">
                     <h2>事業紹介</h2>
                     <div class="detailes">
-                        <a href="#">-ホールディングス事業</a>
-                        <a href="#">-子会社の経営管理等</a>
-                        <a href="#">-グループ会社紹介</a>
+                        <a href="business/holdings.html">-ホールディングス事業</a>
+                        <!-- <a href="business/subsidiary.html">-子会社の経営管理等</a> -->
+                        <a href="business/group.html">-グループ会社紹介</a>
                     </div>
                 </div>
                 <div class="footer-text">
                     <h2>採用情報</h2>
                     <div class="detailes">
-                        <a href="#">-経営幹部採用</a>
-                        <a href="#">-社員採用社員採用</a>
-                        <a href="#">-アルバイト採用</a>
+                        <a href="adoption/executive.html">-経営幹部採用</a>
+                        <a href="adoption/employee.html">-社員採用社員採用</a>
+                        <a href="adoption/part.html">-アルバイト採用</a>
                     </div>
                 </div>
                 <div class="footer-text">
